Fix colors for light and dark mode

--- a/style/wordle_plus.css
+++ b/style/wordle_plus.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Rubik', sans-serif;
     text-align: center;
-    background-color: #0F1108;
+    background-color: #0A0908;
 }
 
 hr {
@@ -57,8 +57,8 @@ p {
     border: none;
     font-size: large;
     font-weight: bold;
-    background-color: #818384;;
-    color: white;
+    background-color: #EDEDF4;;
+    color: #0A0908;
     margin: 4px;
 }
 
@@ -98,7 +98,7 @@ p {
 }
 .tile-box {
     /* Box Properties */
-    border: 2px solid #272729;
+    border: 2px solid #C0C0C0;
     width: 60px;
     height: 60px;
     margin: 2.5px;
@@ -114,15 +114,18 @@ p {
 }
 
 .answer-correct {
-    background-color: #6AAA64;
+    background-color: #5DF88E;
+    color: #0A0908;
 }
 
 .partially-correct {
-    background-color: #C9B468;
+    background-color: #FF6201;
+    color: #0A0908;
 }
 
 .incorrect {
-    background-color: #787C7E;
+    background-color: #EDEDF4;
+    color: #0A0908;
 }
 
 .animate {
