--- a/style/wordle_plus_light.css
+++ b/style/wordle_plus_light.css
@@ -99,7 +99,7 @@ p {
 }
 .tile-box {
     /* Box Properties */
-    border: 2px solid #1C5D99;
+    border: 2px solid #0A0908;
     width: 60px;
     height: 60px;
     margin: 2.5px;
